--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,8 @@
     "stylelint": "npm run ensure-node-version && stylelint **/*.css",
     "build:client": "npm run ensure-node-version && webpack --config webpack.client.config.js",
     "build:server": "npm run ensure-node-version && webpack --config webpack.server.config.js",
-    "build:production:client": "NODE_ENV=production npm run ensure-node-version && webpack --config webpack.client.config.js",
-    "build:production:server": "NODE_ENV=production npm run ensure-node-version && webpack --config webpack.server.config.js",
+    "build:production:client": "NODE_ENV=production npm run ensure-node-version && NODE_ENV=production webpack --config webpack.client.config.js",
+    "build:production:server": "NODE_ENV=production npm run ensure-node-version && NODE_ENV=production webpack --config webpack.server.config.js",
     "build:production": "npm run ensure-node-version && npm run build:production:client && npm run build:production:server",
     "build:dev:client": "npm run ensure-node-version && webpack -w --config webpack.client.config.js",
     "build:dev:server": "npm run ensure-node-version && webpack -w --config webpack.server.config.js",
